force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/Leads_to_Campaigns_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configures the grouping of Leads in a Campaign as Campaign Members.</description>
    <label>Leads to Campaigns Config</label>
    <pluralLabel>Leads to Campaigns Configs</pluralLabel>
</CustomObject>