force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/fields/Campaign_Defaul_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Defaul_Status__c</fullName>
    <description>Initial Status that the created Campaigns will automatically get.</description>
    <label>Campaign Defaul Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>