force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/fields/Campaign_Member_Default_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Default_Status__c</fullName>
    <description>Initial Status that the Campaign Members will get when created automatically.</description>
    <label>Campaign Member Default Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>