force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/fields/Campaign_Name_Delimiter__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_Delimiter__c</fullName>
    <description>Character(s) used as field delimiter in the Campaign Name.</description>
    <label>Campaign Name Delimiter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>