force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/fields/Campaign_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_Prefix__c</fullName>
    <description>Helps identify that this Campaign is used for grouping Leads.</description>
    <label>Campaign Name Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>