force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Leads from this source will be added to this type of Campaign as Campaign Members.</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foobar</fullName>
                <default>true</default>
                <label>Foobar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>