force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/fields/Time_Format__c.field-meta.xml
<CustomField>
    <fullName>Time_Format__c</fullName>
    <description>Format of the Campaign creation timestamp, used as part of the Campaign name.</description>
    <label>Time Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yyyyMMddHHmmss</fullName>
                <default>true</default>
                <label>yyyyMMddHHmmss</label>
            </value>
            <value>
                <fullName>yyyy-MM-dd HH:mm:ss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>