force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/fields/Time_Interval_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Interval_in_Minutes__c</fullName>
    <description>The time interval since the Lead list when the inserted Leads are still assigned to the existing Campaing. It is calculated by adding this number of minutes to the creation datetime of the first Lead.</description>
    <label>Time Interval in Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>