force-app/main/default/objects/Leads_to_Campaigns_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Lead_Source__c</columns>
    <columns>Campaign_Name_Prefix__c</columns>
    <columns>Time_Interval_in_Minutes__c</columns>
    <columns>Campaign_Defaul_Status__c</columns>
    <columns>Campaign_Member_Default_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>